--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next": "^23.5.1",
     "mui": "^0.0.1",
     "next": "13.5.4",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^13.2.2",
@@ -30,6 +31,7 @@
     "zustand": "^4.4.2"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
